--- a/index.html
+++ b/index.html
@@ -8,7 +8,49 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <p>Hello World!</p>
+    <h1 id='title'>Hello World!</h1>
+    <p id='description'>description1</p>
+    <form id='survey-form'> 
+      <div class='form-group'>
+        <label id='name-label' for = 'name'>Name</label>
+        <input type='text' name='name' id='name' class='form-control' placeholder="Enter your Name" required>
+      </div>
+      <div class='form-group'>
+        <label id='email-label' for = 'email'>Email</label>
+        <input type='email' name='email' id='email' class='form-control' placeholder="Enter your Email" required>
+      </div>
+      <div class='form-group'>
+        <label id='number-label' for = 'number'>Number</label>
+        <input type='number' name='number' id='number' min=0 max=100 class='form-control' placeholder="Enter your number" required>
+      </div>
+      <div>
+        <label for="option">Choose an Option:</label>
+
+        <select id='dropdown' name="option">
+          <option value="op1">op1</option>
+          <option value="op2">op2</option>
+          <option value="op3">op3</option>
+          <option value="op4">op4</option>
+        </select>
+      </div>
+      <div>
+        <input type='radio' name='attribute' value="1">
+        <input type='radio' name='attribute' value="2">
+      </div>
+      <div>
+        <input type='checkbox' name='attribute' value="1">
+        <input type='checkbox' name='attribute' value="2">
+      </div>
+      <div>
+        <textarea></textarea>
+      </div>
+      <div>
+        <button id='submit'>Submit</button>
+      </div>
+
+
+
+  </form>
     <!--
 
     Hello Camper!
